# edp-learning

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.dlt/: config.toml  secrets.toml
lessons/: 1_intro_resources_sources_pipelines.ipynb  1b_solutions.ipynb  2_config_and_secrets.ipynb  3_incremental_loading_and_write_dispositions.ipynb  4_logging_and_tracing.ipynb  5_incremental_loading_deep_dive.ipynb
src/edp_workshop/: main.py
tutorials/: 2_config_and_secrets.ipynb  3_incremental_loading_and_write_dispositions.ipynb  config_and_secrets.ipynb  intro.ipynb  write_dispositions_and_incremental_loading.ipynb
